--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
 body {
   font-family: "Open Sans", sans-serif;
+  padding: 20px 60px;
+  font-weight: 300;
+  font-size: large;
+}
+
+a {
+  text-decoration: none;
+  color: black;
 }
